try fix navbar issue on mobile (#1)
* try fix navbar issue on mobile

* test putting navbar inside herosection

* test erase navbar

* code refactoring

* code refactoring

* fix

* fix

* fix

* last fic

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,6 +108,9 @@
 }
 
 @layer base {
+    * {
+        box-sizing: border-box;
+    }
     html {
         scroll-behavior: smooth;
     }
@@ -117,6 +120,8 @@
         background-color: black;
         color: white;
         font-family: "Fira Code", "Menlo", "Monaco", "Courier New", monospace;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
     }
     section {
         scroll-margin-top: 100px;
